home page update with "How it works" section

--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -61,3 +61,4 @@ $footer-background-color: #f3f3f3;  // Shade of grey
 // Importing extensions
 @import '../node_modules/bulma-checkradio/src/sass/index.sass';
 @import '../node_modules/bulma-switch/src/sass/index.sass';
+@import '../node_modules/bulma-steps/src/sass/index.sass';
