--- a/TFC/imports/UI/css/generic.css
+++ b/TFC/imports/UI/css/generic.css
@@ -1,10 +1,15 @@
 /* Disable text selection*/
 .label, .navbar-item, .no-select {
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+  -webkit-touch-callout: none;  /* iOS Safari */
+    -webkit-user-select: none;  /* Safari */
+     -khtml-user-select: none;  /* Konqueror HTML */
+       -moz-user-select: none;  /* Old versions of Firefox */
+        -ms-user-select: none;  /* Internet Explorer/Edge */
+            user-select: none;  /* Non-prefixed version, currently
                                   supported by Chrome, Opera and Firefox */
+}
+
+.width-fit-content {
+    width: fit-content;
+    width: -moz-fit-content;  /* Firefox */
 }
