Select dropdown for categories

--- a/TFC/imports/UI/css/animatedLabel.css
+++ b/TFC/imports/UI/css/animatedLabel.css
@@ -1,6 +1,7 @@
 div.field.has-animated-label {position:relative;}
 
-input.has-animated-label {
+input.has-animated-label,
+textarea.has-animated-label {
     padding: 25px 12px 6px 40px !important;
     height: 45px !important;
     border:none !important;
@@ -22,7 +23,8 @@ label.is-animated {
 }
 
 /* Display as upper label when input is focused or when input isn't empty (so when the placeholder isn't shown) */
-input:focus + label.is-animated, input.has-animated-label:not(:placeholder-shown) + label.is-animated {
+input:focus + label.is-animated, input.has-animated-label:not(:placeholder-shown) + label.is-animated,
+textarea:focus + label.is-animated, textarea.has-animated-label:not(:placeholder-shown) + label.is-animated {
     color: #51A2DA;
     font-weight: 700 !important;
     font-size: 12px;
