--- a/TFC/imports/UI/css/generic.css
+++ b/TFC/imports/UI/css/generic.css
@@ -10,6 +10,6 @@
 }
 
 .width-fit-content {
-    width: fit-content;
     width: -moz-fit-content;  /* Firefox */
+         width: fit-content;  /* Non-prefixed version, currently supported by Chrome */
 }
