--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -12,7 +12,7 @@ $navbar-item-img-max-height: 3rem;
 $primary: #e47312;  // Primary color in orange
 $link: #8cba51;  // Links in green
 $success: #8cba51;  // Green
-$danger: #F44336;
+$danger: #DC310B;
 
 // Inputs
 $input-focus-border-color: transparent;  // No border
