--- a/TFC/imports/UI/css/form.css
+++ b/TFC/imports/UI/css/form.css
@@ -31,3 +31,11 @@ textarea:focus + label.is-animated, textarea.has-animated-label:not(:placeholder
     -webkit-transform: translate3d(0, -10px, 0);
             transform: translate3d(0, -10px, 0);
 }
+
+.character-counter{
+    float: right;
+}
+
+.file-name{
+    text-align: center;;
+}
