home text modification and edit button added in product page

--- a/TFC/imports/UI/css/generic.css
+++ b/TFC/imports/UI/css/generic.css
@@ -1,4 +1,4 @@
-/* Disable text selection*/
+/* Disable text selection */
 .label, .navbar-item, .no-select {
   -webkit-touch-callout: none;  /* iOS Safari */
     -webkit-user-select: none;  /* Safari */
@@ -12,4 +12,9 @@
 .width-fit-content {
     width: -moz-fit-content;  /* Firefox */
          width: fit-content;  /* Non-prefixed version, currently supported by Chrome */
+}
+
+/* Styling icons in buttons */
+.button .icon:first-child:last-child {
+    margin-right: 0;
 }
