--- a/TFC/imports/UI/css/generic.css
+++ b/TFC/imports/UI/css/generic.css
@@ -18,3 +18,13 @@
 .button .icon:first-child:last-child {
     margin-right: 0;
 }
+
+
+/* Styling links */
+.link{
+    cursor: pointer;  /* Default links cursor */
+    background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.5rem;  /* Underline in primary orange color */
+    transition: background-position-y .20s ease-out;  /* Transition to cover the whole background when link is hovered */
+}
+
+.link:hover {background-position-y: 0;}
