--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -41,6 +41,7 @@ $footer-background-color: #f3f3f3;  // Shade of grey
 @import "../node_modules/bulma/sass/components/card.sass";
 @import "../node_modules/bulma/sass/components/dropdown.sass";
 @import "../node_modules/bulma/sass/components/message.sass";
+@import "../node_modules/bulma/sass/components/modal.sass";
 @import "../node_modules/bulma/sass/components/navbar.sass";
 @import "../node_modules/bulma/sass/components/tabs.sass";
 
