--- a/TFC/imports/UI/css/footer.css
+++ b/TFC/imports/UI/css/footer.css
@@ -13,3 +13,8 @@ body {
     width: 100%;  /* Footer takes full width */
     height: 9rem;  /* Height of padding-bottom */
 }
+
+.footer li.link{
+    background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem;
+    margin: auto;
+}
