contact page, main navbar styling and responsive filters display in search results

--- a/TFC/imports/UI/css/form.css
+++ b/TFC/imports/UI/css/form.css
@@ -40,7 +40,7 @@ textarea:focus + label.is-animated, textarea.has-animated-label:not(:placeholder
 }
 
 .file-name{
-    text-align: center;;
+    text-align: center;
 }
 
 /* Remove the scollbar */
