--- a/TFC/imports/UI/css/generic.css
+++ b/TFC/imports/UI/css/generic.css
@@ -24,5 +24,5 @@
 /* Styling links */
 .link{
     cursor: pointer;  /* Default links cursor */
-    border-bottom: 0.1rem solid #e47312;
+    text-decoration: underline #e47312;
 }
