--- a/TFC/client/main.css
+++ b/TFC/client/main.css
@@ -7934,3 +7934,13 @@ a.tag:hover {
       .steps.is-large .step-item .step-details .step-title {
         font-size: 1.8rem;
         font-weight: 600; }
+
+.is-collapsible {
+  overflow-y: hidden;
+  transition: height 0.2s ease; }
+  .is-collapsible.is-active {
+    transition: height 0.2s ease; }
+  .is-collapsible.message-body {
+    padding: 0 !important; }
+    .is-collapsible.message-body .message-body-content {
+      padding: 1.25em 1.5em; }
