--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -68,3 +68,4 @@ $footer-background-color: #f3f3f3;  // Shade of grey
 @import '../node_modules/bulma-checkradio/src/sass/index.sass';
 @import '../node_modules/bulma-switch/src/sass/index.sass';
 @import '../node_modules/bulma-steps/src/sass/index.sass';
+@import '../node_modules/@creativebulma/bulma-collapsible/src/sass/index.sass';
