--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -61,6 +61,7 @@ $footer-background-color: #f3f3f3;  // Shade of grey
 @import "../node_modules/bulma/sass/elements/image.sass";
 @import "../node_modules/bulma/sass/elements/notification.sass";
 @import "../node_modules/bulma/sass/elements/other.sass";
+@import "../node_modules/bulma/sass/elements/progress.sass";
 @import "../node_modules/bulma/sass/elements/table.sass";
 @import "../node_modules/bulma/sass/elements/tag.sass";
 @import "../node_modules/bulma/sass/elements/title.sass";
