--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -32,6 +32,9 @@ $dimensions: 16 24 32 48 64 96 128 150;  // Adding a 150x150 dimension for image
 $footer-padding: 0;
 $footer-background-color: #f3f3f3;  // Shade of grey
 
+// Fonts
+$family-code: 'Changa One';
+
 
 
 // Importing only what we need from Bulma
