--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -26,7 +26,7 @@ $input-placeholder-color: #909090;  // Shade of grey for placeholders
 $label-weight: inherit;  // Reset default weight so we can set it for animated placeholders
 
 // Images
-$dimensions: 16 24 32 48 64 90 96 128 150;  // Adding a 150x150 dimension for images
+$dimensions: 16 24 32 48 64 80 90 96 128 150;  // Adding a 150x150 dimension for images
 
 // Footer
 $footer-padding: 0;
