points update bug resolved & style update

--- a/imports/UI/css/banners.css
+++ b/imports/UI/css/banners.css
@@ -1,4 +1,4 @@
-.productBanner p#description{
+.productBanner p#description, .moderationBanner p#description{
     max-height: 150px;
     overflow: hidden;
     margin-left: 1rem;
