--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -2,7 +2,7 @@
 
 // Importing fonts
 @import url('https://fonts.googleapis.com/css?family=Changa+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 
 
 // Update Bulma's global variables
@@ -34,6 +34,7 @@ $footer-background-color: #f3f3f3;  // Shade of grey
 
 // Fonts
 $family-code: 'Changa One';
+$family-monospace: 'Dancing Script';
 
 
 
