bulma updated to v0.9.0 and FontAwesome updated to v5.13.1

--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -43,6 +43,7 @@ $family-monospace: 'Dancing Script';
 // Mandatory imports
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
+@import "../node_modules/bulma/sass/helpers/_all.sass";
 
 // Full imports
 @import "../node_modules/bulma/sass/form/_all.sass";
