--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -47,7 +47,6 @@ $family-monospace: 'Dancing Script';
 
 // Full imports
 @import "../node_modules/bulma/sass/form/_all.sass";
-@import "../node_modules/bulma/sass/grid/_all.sass";
 @import "../node_modules/bulma/sass/layout/_all.sass";
 
 // Components
@@ -64,12 +63,14 @@ $family-monospace: 'Dancing Script';
 @import "../node_modules/bulma/sass/elements/container.sass";
 @import "../node_modules/bulma/sass/elements/icon.sass";
 @import "../node_modules/bulma/sass/elements/image.sass";
-@import "../node_modules/bulma/sass/elements/notification.sass";
 @import "../node_modules/bulma/sass/elements/other.sass";
 @import "../node_modules/bulma/sass/elements/progress.sass";
 @import "../node_modules/bulma/sass/elements/table.sass";
 @import "../node_modules/bulma/sass/elements/tag.sass";
 @import "../node_modules/bulma/sass/elements/title.sass";
+
+// Grid
+@import "../node_modules/bulma/sass/grid/columns.sass";
 
 // Importing extensions
 @import '../node_modules/bulma-checkradio/src/sass/index.sass';
