Refactoring & small bugs fixed

--- a/imports/UI/css/navbar.css
+++ b/imports/UI/css/navbar.css
@@ -1,6 +1,3 @@
-.navbar-item img{
-    max-width: 9rem;
-}
-a.navbar-item{
-    display: flex;
-}
+.navbar-item img{ max-width: 9rem;}
+
+a.navbar-item{ display: flex;}
