--- a/imports/UI/css/footer.css
+++ b/imports/UI/css/footer.css
@@ -1,19 +1,17 @@
-body {
+body{
   position: relative;
   min-height: 100vh;  /* Body takes full viewport height */
 }
 
-#content-wrap {
+#content-wrap{
   padding-bottom: 10rem;  /* Leave space for footer */
 }
 
-.footer {
+.footer{
     position: absolute;
     bottom: 0;  /* Position at the bottom */
     width: 100%;  /* Footer takes full width */
     height: 9rem;  /* Height of padding-bottom */
 }
 
-.footer li.link{
-    margin: auto;
-}
+.footer li.link{ margin: auto; }
